--- a/templates/findprice.html
+++ b/templates/findprice.html
@@ -1,8 +1,6 @@
-{% include 'header.html' %}
-         <h2>Welcome to the the coin price getter</h2>
+<h4><b>Find</b> coin price</h4>
          <form action="/displayprice">
              What's the coin name? (e.g. Bitcoin) <input type='text' name='coin_id'><br>
              What's the conversion currency? (e.g. USD) <input type='text' name='convert_currency'><br>
              <input type='submit' value='Continue'>
          </form>
-{% include 'footer.html' %}
