--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
   <p>Name</p>
   <p><input type="text" name = "nm" /> </p>
   <p>Password</p>
-  <p><input type="text" name = "pw" /> </p>
+  <p><input type="password" name = "pw" /> </p>
   <p><input type="submit" value="submit"/> </p>
 
 </form>
