Added leaderboard functionality to site

--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,7 @@
     <a href="/logout">Logout</a>
     <a href="/about">About</a>
     <a href = "/trade">Trade</a>
+    <a href="/leaderboard">Leaderboard</a>
     </div>
     {% include 'flashmsg.html' %}
 
