--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,3 +1,9 @@
 .alignRight {
     float: right;
 }
+
+#leaderboard th, td{
+    background-color: red;
+    padding: 15px;
+    text-align: left;
+}
