Moved executed_sell and executed_buy messages to flash to Trade. Now all functions are done on trade page!

--- a/templates/buy.html
+++ b/templates/buy.html
@@ -1,6 +1,6 @@
 
 <h4>Place <b>buy</b> order</h4>
-<form action="/buy">
+<form action="/trade/buy">
 	What's the coin name? (e.g. Bitcoin) <input type='text' name='coin_id'><br>
   How much to buy? <input type='text' name='coin_amount'><br>
   <input type='submit' value='Continue'>
