--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/stylesheet.css">
+    <link rel= "stylesheet" type= "text/css" href= "../static/stylesheet.css">
     <title>{{title}}</title>
   <body>
     <div align="center">
