--- a/templates/sell-new.html
+++ b/templates/sell-new.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-</head>
-<body>
 <div class="card-body">
-                                    <form action="#buyModal">
+                                    <form action="#sellModal">
                                         <div class="form-group"><label>Coin Name</label><input class="form-control" type="search" name="coin_id"></div>
-
+                                    </form>
                                     <div class="input-group">
                                         <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount">
-                                        <div class="input-group-append"><a class="btn btn-primary" role="button" data-toggle="modal" href="#buyModal" type="submit" value="Continue">Buy</a></div>
+                                        <div class="input-group-append"><a class="btn btn-primary" role="button" data-toggle="modal" href="#sellModal">Sell</a></div>
                                     </div>
-                                        </form>
                                     <div>
-                                        <div class="modal fade" role="dialog" tabindex="-1" id="buyModal">
+                                        <div class="modal fade" role="dialog" tabindex="-1" id="sellModal">
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h4>Buy Confirmation</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                                                        <h4>Sell Confirmation</h4><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <p class="text-center text-muted">Confirm purchase of {{amount}} {{coin_id}} for {{price}}?</p>
+                                                        <p class="text-center text-muted">Confirm sale of {{amount}} {{coin_id}} for {{price}}?</p>
                                                     </div>
-                                                    <form action="">
-                                                        <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button><button class="btn btn-primary" type="submit">Confirm</button></div>
-                                                    </form>
+                                                    <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button>
+                                                        <button class="btn btn-primary" type="submit">Confirm</button></div>
                                                 </div>
                                             </div>
                                         </div>
