split up buy modal and sell modal

--- a/templates/trade.html
+++ b/templates/trade.html
@@ -151,7 +151,8 @@
                                 <div class="card-header py-3">
                                     <h6 class="text-primary font-weight-bold m-0">Sell</h6>
                                 </div>
-
+                            <!-- sell -->
+                                {% include "sell-new.html" %}
                             </div>
                         </div>
 
