--- a/templates/buy-new.html
+++ b/templates/buy-new.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="card-body">
-                                    <form action="/trade/buyModal">
+                                    <form action="/trade/buyModal" method="POST">
                                         <div class="form-group"><label>Coin Name</label><input class="form-control" type="search" name="coin_id"></div>
 
                                     <div class="input-group">
@@ -24,7 +24,10 @@
                                                     <div class="modal-body">
                                                         <p class="text-center text-muted">Confirm purchase of {{amount}} {{coin_id}} for {{price}}?</p>
                                                     </div>
-                                                    <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button><button class="btn btn-primary" type="submit">Confirm</button></div>
+                                                    <form action="/trade/buy" method="POST">
+                                                        <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button><button class="btn btn-primary" type="submit" name="confirm">Confirm</button></div>
+                                                    </form>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
