--- a/templates/sell-new.html
+++ b/templates/sell-new.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <div class="card-body">
-                                    <form action="#sellModal">
-                                        <div class="form-group"><label>Coin Name</label><input class="form-control" type="search" name="coin_id"></div>
-                                    </form>
+                                    <form action="/trade" method="POST" name="sell-form">
+                                        <div class="form-group"><label>Coin Name</label><input class="form-control" type="search" name="coin_id_sell"></div>
+                                    
                                     <div class="input-group">
-                                        <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount">
+                                        <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount_sell">
                                         <div class="input-group-append"><a class="btn btn-primary" role="button" data-toggle="modal" href="#sellModal">Sell</a></div>
                                     </div>
                                     <div>
@@ -18,11 +18,15 @@
                                                     <div class="modal-body">
                                                         <p class="text-center text-muted">Confirm sale of {{amount}} {{coin_id}} for {{price}}?</p>
                                                     </div>
-                                                    <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button>
-                                                        <button class="btn btn-primary" type="submit">Confirm</button></div>
+                                                    <form action="/trade" method="POST">
+                                                        <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button>
+                                                            <button class="btn btn-primary" type="submit" name="confirm">Confirm</button></div>
+                                                    </form>
+            
                                                 </div>
                                             </div>
                                         </div>
+                                    </form>
                                     </div>
                                 </div>
 </body>
