--- a/templates/buy-new.html
+++ b/templates/buy-new.html
@@ -4,10 +4,10 @@
 <body>
 <div class="card-body">
                                     <form action="/trade" method="POST" name="buy-form">
-                                        <div class="form-group"><label>Coin Name</label><input class="form-control" type="text" name="coin_id"></div>
+                                        <div class="form-group"><label>Coin Name</label><input class="form-control" type="text" name="coin_id_buy"></div>
 
                                     <div class="input-group">
-                                        <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount">
+                                        <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount_buy">
                                         <div class="input-group-append"><a class="btn btn-primary" role="button" data-toggle="modal" href="#buyModal" type="submit" value="Continue">Buy</a></div>
                                     </div>
                                        <!-- </form> --> 
