fix for buy/sell bug

--- a/templates/buy-new.html
+++ b/templates/buy-new.html
@@ -4,10 +4,10 @@
 <body>
 <div class="card-body">
                                     <form action="/trade" method="POST" name="buy-form">
-                                        <div class="form-group"><label>Coin Name</label><input class="form-control" type="text" name="coin_id_buy"></div>
+                                        <div class="form-group"><label>Coin Name</label><input class="form-control" type="text" name="coin_id"></div>
 
                                     <div class="input-group">
-                                        <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount_buy">
+                                        <div class="input-group-prepend"><span class="input-group-text">Amount</span></div><input class="form-control" type="text" name="coin_amount">
                                         <div class="input-group-append"><a class="btn btn-primary" role="button" data-toggle="modal" href="#buyModal" type="submit" value="Continue">Buy</a></div>
                                     </div>
                                        <!-- </form> --> 
@@ -22,7 +22,7 @@
                                                         <p class="text-center text-muted">Confirm purchase of {{amount}} {{coin_id}} for {{price}}?</p>
                                                     </div>
                                                     <form action="/trade" method="POST">
-                                                        <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button><button class="btn btn-primary" type="submit" name="confirm">Confirm</button></div>
+                                                        <div class="modal-footer"><button class="btn btn-light" data-dismiss="modal" type="button">Cancel</button><button class="btn btn-primary" type="submit" name="confirm_buy">Confirm</button></div>
                                                     </form>
                                                     
                                                 </div>
